<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp"
    android:background="@color/white"
    android:fillViewport="true"
    tools:context=".ui.auth.VerifyEmailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Icon -->
        <ImageView
            android:id="@+id/verify_icon"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="32dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/verify_email_icon"
            android:src="@drawable/coffee_shop_logo" />

        <!-- Title -->
        <TextView
            android:id="@+id/tv_verify_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:letterSpacing="0.01"
            android:text="@string/verify_your_email"
            android:textColor="@color/dark_brown"
            android:textSize="26sp"
            android:textStyle="bold" />

        <!-- Description -->
        <TextView
            android:id="@+id/tv_verify_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:gravity="center"
            android:lineSpacingExtra="4dp"
            android:text="@string/please_check_your_inbox_and_click_the_verification_link_to_activate_your_account"
            android:textColor="#555555"
            android:textSize="15sp" />

        <!-- Didn't get the email? -->
        <TextView
            android:id="@+id/tv_didnt_get"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/didn_t_get_the_email"
            android:textColor="#555555"
            android:textSize="14sp" />

        <!-- Resend clickable text -->
        <TextView
            android:id="@+id/tv_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:text="@string/resend_verification_email"
            android:textColor="@color/dark_brown"
            android:textSize="17sp"
            android:textStyle="bold" />


        <!-- Already verified? -->
        <TextView
            android:id="@+id/tv_already_verified"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="6dp"
            android:text="@string/already_verified"
            android:textColor="#555555"
            android:textSize="14sp" />

        <!-- Continue clickable text -->
        <TextView
            android:id="@+id/tv_continue_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/continue_to_home"
            android:textColor="@color/dark_brown"
            android:textSize="17sp"
            android:textStyle="bold" />

        <!-- Loading -->
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>

</ScrollView>
