<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.auth.ForgetPasswordFragment">

    <TextView
        android:textColor="@color/dark_brown"
        android:layout_marginBottom="46dp"
        android:textSize="26sp"
        android:textStyle="bold"
        android:text="@string/forget_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


    <ImageView
        android:layout_gravity="center"
        android:contentDescription="@string/coffee_shop_logo"
        android:src="@drawable/coffee_shop_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"/>

    <TextView
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginTop="46dp"
        android:paddingHorizontal="12dp"
        android:textColor="#A9545151"
        android:textSize="14sp"
        android:layout_marginBottom="20dp"
        android:text="@string/forget_pass_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/CoffeeTextInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:paddingHorizontal="12dp"
            android:textSize="16sp" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_send_link"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/dark_brown"
        android:text="@string/continuee"
        android:textSize="16sp"
        android:letterSpacing="0.02" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"/>


</LinearLayout>