<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:context=".ui.auth.LoginFragment">

        <ImageView
            android:padding="8dp"
            android:backgroundTint="@color/light_brown"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_marginVertical="16dp"
            android:background="@drawable/circle_bg"
            android:src="@drawable/coffee_shop_logo"
            android:contentDescription="@string/coffee_shop_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="24dp"
            android:text="@string/welcome_to_coffee_home"
            android:textColor="@color/dark_brown"
            android:textSize="25sp"
            android:letterSpacing="0.02"
            android:fontFamily="@font/acme"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CoffeeTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            app:startIconDrawable="@drawable/email_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                style="@style/CoffeeTextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/CoffeeTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            app:endIconCheckable="true"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_brown"
            app:startIconDrawable="@drawable/password_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_et"
                style="@style/CoffeeTextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/forget_pass_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginTop="8dp"
            android:text="@string/forget_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:text="@string/sign_in"
            android:textSize="16sp"
            android:letterSpacing="0.02"
            android:backgroundTint="@color/dark_brown" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
            />

        <TextView
            android:id="@+id/signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="@color/dark_brown"
            android:text="@string/don_t_have_an_account_sign_up" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>

    </LinearLayout>



</ScrollView>
