<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="20dp"
        android:paddingTop="24dp"
        android:gravity="center"
        android:paddingBottom="16dp"
        tools:context=".ui.auth.LoginFragment">

        <!-- Logo -->
        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/circle_bg"
            android:backgroundTint="@color/light_brown"
            android:padding="10dp"
            android:src="@drawable/coffee_shop_logo"
            android:contentDescription="@string/coffee_shop_logo" />

        <!-- Title -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_an_account"
            android:textColor="@color/dark_brown"
            android:textSize="26sp"
            android:fontFamily="@font/acme"
            android:textStyle="bold"
            android:letterSpacing="0.02"
            android:layout_marginBottom="20dp" />

        <!-- Username -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/CoffeeTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:startIconDrawable="@drawable/person_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/user_et"
                style="@style/CoffeeTextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/user_name"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Email -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/CoffeeTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/email_ic">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_et"
                style="@style/CoffeeTextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/CoffeeTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:startIconDrawable="@drawable/password_ic"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pass_et"
                style="@style/CoffeeTextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Confirm Password -->
        <com.google.android.material.textfield.TextInputLayout
            style="@style/CoffeeTextInputStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:startIconDrawable="@drawable/password_ic"
            app:endIconMode="password_toggle"
            app:endIconTint="@color/dark_brown">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conf_pass_et"
                style="@style/CoffeeTextInputEditStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:hint="@string/confirm_password"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Button -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/dark_brown"
            android:text="@string/sign_up"
            android:textSize="16sp"
            android:letterSpacing="0.02" />

        <View
            android:layout_width="match_parent"
            android:layout_height="50dp"
           />

        <!-- Bottom link -->
        <TextView
            android:id="@+id/sign_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:textColor="@color/dark_brown"
            android:text="@string/already_have_an_account_sign_in" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>

    </LinearLayout>

</ScrollView>
