<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/very_light_gray">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="6dp"
        android:backgroundTint="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="24dp">

            <ImageButton
                android:id="@+id/ivBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:padding="12dp"
                android:contentDescription="@string/back"
                android:background="@android:color/transparent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:tint="@color/primary_color" />


            <!-- Profile Image -->
            <FrameLayout
                android:layout_width="140dp"
                android:layout_height="140dp"
                android:layout_gravity="center"
                android:layout_marginBottom="32dp">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="140dp"
                    android:layout_height="140dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/person_ic"
                    android:background="@drawable/circle_bg"
                    android:backgroundTint="@color/very_light_gray"
                    android:clipToOutline="true"/>

                <ImageView
                    android:id="@+id/ivEditPhoto"
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_gravity="bottom|end"
                    android:layout_margin="6dp"
                    android:background="@drawable/circle_bg"
                    android:padding="8dp"
                    android:backgroundTint="@color/primary_color"
                    android:src="@drawable/ic_edit"
                    app:tint="@android:color/white" />
            </FrameLayout>

            <!-- Username -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CoffeeTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:startIconDrawable="@drawable/person_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/user_et"
                    style="@style/CoffeeTextInputEditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:hint="@string/user_name"
                    android:inputType="textPersonName" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CoffeeTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/email_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_et"
                    style="@style/CoffeeTextInputEditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:enabled="false"
                    android:focusable="false"
                    android:clickable="false"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Phone -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CoffeeTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/phone_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone_et"
                    style="@style/CoffeeTextInputEditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:hint="@string/phone_number"
                    android:inputType="phone" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- calender -->
            <com.google.android.material.textfield.TextInputLayout
                style="@style/CoffeeTextInputStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:startIconDrawable="@drawable/calendar_ic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/calender_et"
                    style="@style/CoffeeTextInputEditStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="8dp"
                    android:focusable="false"
                    android:clickable="true"
                    android:inputType="none"
                    android:cursorVisible="false"
                    android:hint="Date of Birth"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Buttons -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/save_btn"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="32dp"
                android:backgroundTint="@color/primary_color"
                android:text="@string/save"
                android:textSize="16sp"
                android:letterSpacing="0.02" />

        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

</ScrollView>